[HP-24] DeletePet method + model const Pet
